--- a/cs118-25winter/sections/term-index.tex
+++ b/cs118-25winter/sections/term-index.tex
@@ -2,4 +2,5 @@
 name server (NS), resource record (RR), content distribution network
 (CDN), top level domains (TLDs), canonical name (CNAME), address (A),
 transmission control protocol (TCP), user datagram protocol (UDP),
-internet protocol (IP).
+internet protocol (IP). maximum transmit unit (MTU). Don't fragment bit
+(DF bit). More fragments bit (MF bit).
