Update cs118 cheat sheet

--- a/cs118-25winter/cs118-cheat-sheet.tex
+++ b/cs118-25winter/cs118-cheat-sheet.tex
@@ -1,4 +1,4 @@
-\documentclass[10pt,landscape,letterpaper]{article}
+\documentclass[10pt,landscape,letterpaper,twoside]{article}
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
 \usepackage{lmodern}
@@ -11,7 +11,7 @@
 \usepackage[t1]{sourcesanspro}
 \usepackage{multicol}
 \usepackage{wrapfig}
-\usepackage[top=6mm,bottom=6mm,left=6mm,right=6mm]{geometry}
+\usepackage[margin=6mm,top=14mm,bottom=14mm]{geometry}
 \usepackage[framemethod=tikz]{mdframed}
 \usepackage{microtype}
 \usepackage{pdfpages}
