--- a/cs118-25winter/sections/term-index.tex
+++ b/cs118-25winter/sections/term-index.tex
@@ -2,5 +2,9 @@
 name server (NS), resource record (RR), content distribution network
 (CDN), top level domains (TLDs), canonical name (CNAME), address (A),
 transmission control protocol (TCP), user datagram protocol (UDP),
-internet protocol (IP). maximum transmit unit (MTU). Don't fragment bit
-(DF bit). More fragments bit (MF bit).
+internet protocol (IP), maximum transmit unit (MTU), Don't fragment bit
+(DF bit), More fragments bit (MF bit), Classless Inter-Domain Routing
+(CIDR), Netowrk address translation (NAT), Message Authenticatio Code
+(MAC in cryptography), Hash based MAC (HMAC), Medium Access Control (MAC
+in networking), Open Shortest Path First (OSPF), Border Gateway Protocol
+(BGP), autonomous systems (AS)
