--- a/cs118-25winter/sections/formulae.tex
+++ b/cs118-25winter/sections/formulae.tex
@@ -58,15 +58,15 @@ $t_{\text{trans}}\to\infty$
 For pure aloha, one node success, any node success, max efficiency
 
 \remarkbox{
-  $p\cdot\left(1-p\right)^{2\left(N-1\right)}$
-  $Np\cdot\left(1-p\right)^{2\left(N-1\right)}$
+  $p\cdot\left(1-p\right)^{2\left(N-1\right)}$ \\
+  $Np\cdot\left(1-p\right)^{2\left(N-1\right)}$ \\
   $\frac{1}{2e}$ as $N\to\infty$
 }
 
 For slotted aloha
 
 \remarkbox{
-  $p\cdot\left(1-p\right)^{N-1}$
-  $Np\cdot\left(1-p\right)^{N-1}$
+  $p\cdot\left(1-p\right)^{N-1}$ \\
+  $Np\cdot\left(1-p\right)^{N-1}$ \\
   $\frac{1}{e}$ as $N\to\infty$
 }
